docker builds from Plato image now

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: "3.3"
 services:
   backend:
     build: .
+    tty: true
     container_name: "backend"
     volumes:
       - ".:/usr/src/app"
@@ -10,6 +11,16 @@ services:
       - "3000:3000"
     depends_on:
       - mongo
+    privileged: true
+    runtime: nvidia
+    environment:
+      - OMPI_ALLOW_RUN_AS_ROOT=1
+      - OMPI_ALLOW_RUN_AS_ROOT_CONFIRM=1
+      - NVIDIA_VISIBLE_DEVICES=all
+      - NVIDIA_DRIVER_CAPABILITIES=all
+    image: 'detectme'
+    ipc: 'host'
+    stdin_open: true
   modeler:
     build: "../Plato3D"
     container_name: "modeler"
