updated dependency versions

--- a/package.json
+++ b/package.json
@@ -13,39 +13,39 @@
   },
   "dependencies": {
     "bcrypt": "^3.0.6",
-    "cookie-parser": "^1.4.3",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
-    "express": "^4.16.4",
-    "express-fileupload": "^1.1.6",
-    "express-session": "^1.15.6",
-    "express-sse": "^0.5.1",
+    "express": "^4.17.1",
+    "express-fileupload": "^1.2.1",
+    "express-session": "^1.17.1",
+    "express-sse": "^0.5.3",
     "extract-text-webpack-plugin": "^2.1.2",
-    "file-saver": "^2.0.0-rc.3",
+    "file-saver": "^2.0.5",
     "html-webpack-plugin": "^2.30.1",
     "http-proxy-middleware": "^0.17.4",
-    "jsonwebtoken": "^8.4.0",
-    "mongodb": "^3.5.8",
-    "mongoose": "^5.9.16",
-    "nodemon": "^2.0.6",
+    "jsonwebtoken": "^8.5.1",
+    "mongodb": "^3.6.4",
+    "mongoose": "^5.11.15",
+    "nodemon": "^2.0.7",
     "now": "^12.1.11",
     "npm-check": "^5.9.2",
-    "opn": "^5.4.0",
+    "opn": "^5.5.0",
     "optimize-css-assets-webpack-plugin": "^2.0.0",
-    "popper.js": "^1.12.9",
+    "popper.js": "^1.16.1",
     "ramda": "^0.26.1",
     "shelljs": "^0.7.8",
     "unique-filename": "^1.1.1",
-    "xml-formatter": "^1.0.1"
+    "xml-formatter": "^1.2.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.5.0",
-    "@babel/preset-env": "^7.5.0",
-    "babel-jest": "^24.8.0",
-    "eslint": "^6.0.1",
+    "@babel/core": "^7.12.13",
+    "@babel/preset-env": "^7.12.13",
+    "babel-jest": "^24.9.0",
+    "eslint": "^6.8.0",
     "eslint-config-google": "^0.13.0",
-    "husky": "^3.0.0",
-    "jest": "^24.8.0",
-    "node-mocks-http": "^1.7.6",
+    "husky": "^3.1.0",
+    "jest": "^24.9.0",
+    "node-mocks-http": "^1.10.1",
     "supertest": "^4.0.2"
   },
   "engines": {
