--- a/docker/Dockerfile.gpu
+++ b/docker/Dockerfile.gpu
@@ -1,5 +1,9 @@
 FROM plato3d/plato-analyze:cuda-10.2-cc-7.5-develop
 
+# To build, from the Plato3D_backend directory:
+# npm install
+# docker build -f docker/Dockerfile.gpu -t plato3d/plato-backend-cc-7.5 .
+
 RUN apt update; apt -y install paraview
 
 RUN curl -sL https://deb.nodesource.com/setup_14.x | bash - ; apt-get install -y nodejs ; npm install nodemon
@@ -15,7 +19,7 @@ RUN npm install
 
 COPY . .
 
-EXPOSE 8081
+RUN [ ! -d "calculations" ] && mkdir calculations || true
 
 ENTRYPOINT [ "/bin/bash", "--rcfile", "/etc/profile", "-l", "-c" ]
 CMD [ "npm run start" ]
