fixed realizations bug

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -3,7 +3,7 @@ services:
   backend:
     build:
       context: ".."
-      dockerfile: "docker/Dockerfile.cpu"
+      dockerfile: "docker/Dockerfile.gpu"
     tty: true
     container_name: "backend"
     volumes:
