--- a/docker/Dockerfile.gpu
+++ b/docker/Dockerfile.gpu
@@ -1,8 +1,12 @@
 FROM plato3d/plato-analyze:cuda-10.2-cc-7.5-develop
 
 # To build, from the Plato3D_backend directory:
-# npm install
-# docker build -f docker/Dockerfile.gpu -t plato3d/plato-backend-cc-7.5 .
+# 1. npm install
+# 2. set the compute capability and branch of the base image above, e.g., cc-7.5-develop
+# 3. build the image using the correct compute capability in the image name, e.g.:
+#      docker build -f docker/Dockerfile.gpu -t plato3d/plato-backend-cc-7.5 .
+# 4. (optional) push/publish the updated image to hub.docker.com:
+#      sudo docker push plato3d/plato-backend-cc-7.5
 
 RUN apt update; apt -y install paraview
 
@@ -16,10 +20,11 @@ WORKDIR /usr/src/app
 COPY package*.json ./
 
 RUN npm install
+RUN npm install pm2 -g
 
 COPY . .
 
 RUN [ ! -d "calculations" ] && mkdir calculations || true
 
 ENTRYPOINT [ "/bin/bash", "--rcfile", "/etc/profile", "-l", "-c" ]
-CMD [ "npm run start" ]
+CMD [ "pm2-runtime npm -- start" ]
