--- a/docker/Dockerfile.cpu
+++ b/docker/Dockerfile.cpu
@@ -16,10 +16,11 @@ WORKDIR /usr/src/app
 COPY package*.json ./
 
 RUN npm install
+RUN npm install pm2 -g
 
 COPY . .
 
 RUN [ ! -d "calculations" ] && mkdir calculations || true
 
 ENTRYPOINT [ "/bin/bash", "--rcfile", "/etc/profile", "-l", "-c" ]
-CMD [ "npm run start" ]
+CMD [ "pm2-runtime npm -- start" ]
