--- a/docker/Dockerfile.cc-7.5
+++ b/docker/Dockerfile.cc-7.5
@@ -6,7 +6,9 @@ FROM plato3d/plato-analyze:cuda-10.2-cc-7.5-develop
 # 2. (optional) push/publish the updated image to hub.docker.com:
 #      sudo docker push plato3d/plato-backend-cc-7.5
 
-RUN apt update; apt -y install paraview
+RUN apt-get update ; apt-get install ca-certificates \
+    && apt-get update \
+    && apt-get install -y paraview
 
 RUN curl -sL https://deb.nodesource.com/setup_14.x | bash - ; apt-get install -y nodejs ; npm install nodemon
 
